BGDIINF_SB-1180: Implementatoin of qrcode
Migration with clean up of the qrcode from chsdi3.

Implementation of CORS will be done in a later commit.
